--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.24",
+    "@ai-sdk/openai": "^3.0.33",
+    "@ai-sdk/react": "^3.0.101",
+    "@modelcontextprotocol/sdk": "^1.27.1",
+    "ai": "^6.0.99",
+    "framer-motion": "^12.34.3",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
