--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^3.0.33",
     "@ai-sdk/react": "^3.0.101",
     "@modelcontextprotocol/sdk": "^1.27.1",
+    "@mondaydotcomorg/monday-api-mcp": "^2.0.0",
     "ai": "^6.0.99",
     "framer-motion": "^12.34.3",
     "next": "16.1.6",
