--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@ai-sdk/groq": "^3.0.24",
     "@ai-sdk/openai": "^3.0.33",
